--- a/example/echoServer/makefile
+++ b/example/echoServer/makefile
@@ -2,13 +2,12 @@ CXX=g++
 CFLAGS=-g -O2 -Wall -fPIC -Wno-deprecated
 
 INC=-I../../include
-LIB=-L../../lib -lereactor -lprotobuf -lrt
+LIB=-L../../lib -lereactor /usr/local/lib/libprotobuf.a -lrt
 OBJS = $(addsuffix .o, $(basename $(wildcard *.cc)))
 
 all:
-	echoMsg.proto
 	$(CXX) -o server $(CFLAGS) server.cc echoMsg.pb.cc $(INC) $(LIB)
-	$(CXX) -o client $(CFLAGS) client.cc echoMsg.pb.cc $(INC) $(LIB)
+	$(CXX) -o mclient $(CFLAGS) multiClient.cc echoMsg.pb.cc $(INC) $(LIB)
 
 clean:
 	-rm -f *.o *.d server client
