--- a/example/echoServer/makefile
+++ b/example/echoServer/makefile
@@ -6,8 +6,8 @@ LIB=-L../../lib -lereactor /usr/local/lib/libprotobuf.a -lrt
 OBJS = $(addsuffix .o, $(basename $(wildcard *.cc)))
 
 all:
-	$(CXX) -o server $(CFLAGS) server.cc echoMsg.pb.cc $(INC) $(LIB)
-	$(CXX) -o mclient $(CFLAGS) multiClient.cc echoMsg.pb.cc $(INC) $(LIB)
+	$(CXX) -o server.prog $(CFLAGS) server.cc echoMsg.pb.cc $(INC) $(LIB)
+	$(CXX) -o client.prog $(CFLAGS) client.cc echoMsg.pb.cc $(INC) $(LIB)
 
 clean:
 	-rm -f *.o *.d server client
